feat:优化了一些问题，和支付问题